# ai-sesli-asistan

./: .gitignore  README.md  ai_ses_requirements.txt  main.py  pyproject.toml  setup.py
